force-app/main/default/objects/FACS_Affiliate_File__c/FACS_Affiliate_File__c.object-meta.xml
<CustomObject>
    <description>FACS - Files exported from OnAir</description>
    <label>Affiliate File</label>
    <nameField>
        <displayFormat>AF- {0000}</displayFormat>
        <label>Affiliate File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliate Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>