force-app/main/default/objects/FACS_Affiliate_File__c/fields/FACS_ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>FACS_ContentDocumentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContentDocumentId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>