force-app/main/default/objects/FACS_Affiliate_File__c/fields/FACS_File_Name__c.field-meta.xml
<CustomField>
    <fullName>FACS_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>