force-app/main/default/objects/FACS_Affiliate_File__c/fields/FACS_Program__c.field-meta.xml
<CustomField>
    <fullName>FACS_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>