force-app/main/default/objects/FACS_Affiliate_File__c/fields/FACS_Recipient__c.field-meta.xml
<CustomField>
    <fullName>FACS_Recipient__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>