force-app/main/default/objects/FACS_Affiliate_File__c/fields/FACS_Schedule__c.field-meta.xml
<CustomField>
    <fullName>FACS_Schedule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>