force-app/main/default/objects/FACS_Affiliate_File__c/listViews/All_Affiliate_Data.listView-meta.xml
<ListView>
    <fullName>All_Affiliate_Data</fullName>
    <columns>NAME</columns>
    <columns>FACS_Subject__c</columns>
    <columns>FACS_Schedule__c</columns>
    <columns>FACS_Recipient__c</columns>
    <columns>FACS_File_Name__c</columns>
    <columns>FACS_Output_File_Name__c</columns>
    <columns>FACS_Program__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>FACS_ContentDocumentId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Affiliate Data</label>
</ListView>